force-app/main/default/objects/Org_Based_object__c/Org_Based_object__c.object-meta.xml
<CustomObject>
    <label>Org-Based object</label>
    <nameField>
        <displayFormat>OBO-{0000}</displayFormat>
        <label>Org-Based object Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org-Based objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>