force-app/main/default/objects/Org_Based_object__c/fields/Test_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_3__c</fullName>
    <label>Test_Field_3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>