force-app/main/default/objects/Org_Based_object__c/fields/Test_Ricky_23_04__c.field-meta.xml
<CustomField>
    <fullName>Test_Ricky_23_04__c</fullName>
    <label>Test_Ricky_23_04</label>
    <type>Date</type>
</CustomField>