force-app/main/default/objects/Org_Based_object__c/fields/Text_field_1__c.field-meta.xml
<CustomField>
    <fullName>Text_field_1__c</fullName>
    <label>Text field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>